# migration

./: .env.example  .gitignore  README.md  alembic.ini  export.sh  import.py  install.sh  main.py  pyproject.toml  readme.md
app/export/: export.py  readme.md
app/handler/: .env.example  readme.md
app/handler/db/: crud.py  models.py
app/handler/db/migrations/: env.py
app/handler/jobs/: scheduler.py  token_updater.py
app/handler/models/: __init__.py
app/handler/routers/: sub.py
app/handler/utils/: auth.py  panel.py
app/import/: .env.example  import.py  readme.md
app/import/docker/v062/: crud.py
app/import/models/: user.py
app/import/utils/: __init__.py
app/import_/: import.py  readme.md
app/import_/docker/v062/: user.py
app/import_/docker/v063/: crud.py  user.py
app/import_/models/: __init__.py
app/import_/utils/: helpers.py  panel.py  system_config.py
app/importer/: readme.md
app/importer/docker/v063/: crud.py  user.py
app/importer/docker/v070/: crud.py
app/importer/models/: __init__.py  user.py
app/importer/utils/: helpers.py  panel.py
db/: __init__.py
doc/: export.md  handler.md  import.md
export/: export.py
import/: .env.example
import/docker/v0_6_0/db/: crud.py
import/models/: user.py
import/utils/: __init__.py  helpers.py  system_config.py
routers/: subscription.py
utils/: auth.py  config.py  panel.py
